namespace TaskFlow.Agents.Abstractions;

public interface IAgentFactory
{
    IAgent CreateAgent();
}
